# mlops_hw3

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
dto/: dto.py
encoders/: lunch_encoder.pkl  parental_level_of_education_encoder.pkl  race_ethnicity_encoder.pkl  test_preparation_course_encoder.pkl
model/: model.py
preprocess/: preprocess.py
