[project]
name = "mlops-hw3"
version = "0.1.0"
description = ""
authors = [
    {name = "muqaddas"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.120.1,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "kagglehub[pandas-datasets] (>=0.3.13,<0.4.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "scikit-learn (==1.6.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
